--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -36,3 +36,11 @@
 [[constraint]]
   name = "github.com/go-test/deep"
   version = "1.0.1"
+
+[[constraint]]
+  name = "github.com/ryanuber/go-glob"
+  version = "0.1.0"
+
+[[constraint]]
+  name = "github.com/go-redis/redis"
+  version = "6.8.3"
