--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -44,3 +44,7 @@
 [[constraint]]
   name = "github.com/go-redis/redis"
   version = "6.8.3"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/mshaverdo/assert"
