Implement RESP API, change D* command strings to H* to correspond REDIS commands. Update client_test

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -44,3 +44,7 @@
 [[constraint]]
   branch = "master"
   name = "github.com/mshaverdo/assert"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/tidwall/redcon"
